kubernetes/stackrox/secure/base/daemon-set.yaml
# Source: stackrox-secured-cluster-services/templates/collector.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  labels:
    app.kubernetes.io/component: collector
    app.kubernetes.io/instance: stackrox-secured-cluster-services
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: stackrox
    app.kubernetes.io/part-of: stackrox-secured-cluster-services
    app.kubernetes.io/version: 3.72.1
    helm.sh/chart: stackrox-secured-cluster-services-72.1.0
    service: collector
    app: collector
    auto-upgrade.stackrox.io/component: "sensor"
  annotations:
    email: support@stackrox.com
    meta.helm.sh/release-name: stackrox-secured-cluster-services
    meta.helm.sh/release-namespace: stackrox
    owner: stackrox
  name: collector
  namespace: stackrox
spec:
  selector:
    matchLabels:
      service: collector
  template:
    metadata:
      namespace: stackrox
      labels:
        service: collector
        app: collector
        app.kubernetes.io/component: collector
        app.kubernetes.io/instance: stackrox-secured-cluster-services
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: stackrox
        app.kubernetes.io/part-of: stackrox-secured-cluster-services
        app.kubernetes.io/version: 3.72.1
        helm.sh/chart: stackrox-secured-cluster-services-72.1.0
      annotations:
        email: support@stackrox.com
        meta.helm.sh/release-name: stackrox-secured-cluster-services
        meta.helm.sh/release-namespace: stackrox
        owner: stackrox
    spec:
      tolerations:
        - operator: "Exists"
      serviceAccountName: collector
      containers:
        - name: collector
          image: "quay.io/stackrox-io/collector-slim:3.72.1"
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: 50m
              memory: 256Gi
            requests:
              cpu: 25m
              memory: 128Mi
          securityContext:
            capabilities:
              drop:
                - NET_RAW
            privileged: true
            readOnlyRootFilesystem: true
          volumeMounts:
            - mountPath: /host/var/run/docker.sock
              name: var-run-docker-sock
              readOnly: true
            - mountPath: /host/proc
              name: proc-ro
              readOnly: true
            - mountPath: /module
              name: tmpfs-module
            - mountPath: /host/etc
              name: etc-ro
              readOnly: true
            - mountPath: /host/usr/lib
              name: usr-lib-ro
              readOnly: true
            - mountPath: /host/sys
              name: sys-ro
              readOnly: true
            - mountPath: /host/dev
              name: dev-ro
              readOnly: true
            - mountPath: /run/secrets/stackrox.io/certs/
              name: certs
              readOnly: true
        - command:
            - stackrox/compliance
          image: "quay.io/stackrox-io/main:3.72.1"
          imagePullPolicy: IfNotPresent
          name: compliance
          resources:
            limits:
              cpu: "50m"
              memory: 64Mi
            requests:
              cpu: 10m
              memory: 32Mi
          securityContext:
            runAsUser: 0
            readOnlyRootFilesystem: true

            seLinuxOptions:
              type: "container_runtime_t"

          volumeMounts:
            - mountPath: /etc/ssl/
              name: etc-ssl
            - mountPath: /etc/pki/ca-trust/
              name: etc-pki-volume
            - mountPath: /host
              name: host-root-ro
              readOnly: true
            - mountPath: /run/secrets/stackrox.io/certs/
              name: certs
              readOnly: true
      volumes:
        - hostPath:
            path: /var/run/docker.sock
          name: var-run-docker-sock
        - hostPath:
            path: /proc
          name: proc-ro
        - emptyDir:
            medium: Memory
          name: tmpfs-module
        - hostPath:
            path: /etc
          name: etc-ro
        - hostPath:
            path: /usr/lib
          name: usr-lib-ro
        - hostPath:
            path: /sys/
          name: sys-ro
        - hostPath:
            path: /dev
          name: dev-ro
        - name: certs
          secret:
            secretName: collector-tls
            items:
              - key: collector-cert.pem
                path: cert.pem
              - key: collector-key.pem
                path: key.pem
              - key: ca.pem
                path: ca.pem
        - hostPath:
            path: /
          name: host-root-ro
        - name: etc-ssl
          emptyDir: {}
        - name: etc-pki-volume
          emptyDir: {}
