kubernetes/stackrox/secure/base/network-policy.yaml
# Source: stackrox-secured-cluster-services/templates/admission-controller-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: admission-control-no-ingress
  namespace: stackrox
  labels:
    app.kubernetes.io/component: admission-control
    app.kubernetes.io/instance: stackrox-secured-cluster-services
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: stackrox
    app.kubernetes.io/part-of: stackrox-secured-cluster-services
    app.kubernetes.io/version: 3.72.1
    helm.sh/chart: stackrox-secured-cluster-services-72.1.0
    auto-upgrade.stackrox.io/component: "sensor"
  annotations:
    email: support@stackrox.com
    meta.helm.sh/release-name: stackrox-secured-cluster-services
    meta.helm.sh/release-namespace: stackrox
    owner: stackrox
spec:
  podSelector:
    matchLabels:
      app: admission-control
  ingress:
    - ports:
        - protocol: TCP
          port: 8443
  policyTypes:
    - Ingress
---
# Source: stackrox-secured-cluster-services/templates/collector-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: collector-no-ingress
  namespace: stackrox
  labels:
    app.kubernetes.io/component: collector
    app.kubernetes.io/instance: stackrox-secured-cluster-services
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: stackrox
    app.kubernetes.io/part-of: stackrox-secured-cluster-services
    app.kubernetes.io/version: 3.72.1
    helm.sh/chart: stackrox-secured-cluster-services-72.1.0
    auto-upgrade.stackrox.io/component: "sensor"
  annotations:
    email: support@stackrox.com
    meta.helm.sh/release-name: stackrox-secured-cluster-services
    meta.helm.sh/release-namespace: stackrox
    owner: stackrox
spec:
  podSelector:
    matchLabels:
      app: collector
  policyTypes:
    - Ingress
---
# Source: stackrox-secured-cluster-services/templates/sensor-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: sensor
  namespace: stackrox
  labels:
    app.kubernetes.io/component: sensor
    app.kubernetes.io/instance: stackrox-secured-cluster-services
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: stackrox
    app.kubernetes.io/part-of: stackrox-secured-cluster-services
    app.kubernetes.io/version: 3.72.1
    helm.sh/chart: stackrox-secured-cluster-services-72.1.0
    auto-upgrade.stackrox.io/component: "sensor"
  annotations:
    email: support@stackrox.com
    meta.helm.sh/release-name: stackrox-secured-cluster-services
    meta.helm.sh/release-namespace: stackrox
    owner: stackrox
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: collector
        - podSelector:
            matchLabels:
              service: collector
        - podSelector:
            matchLabels:
              app: admission-control

      ports:
        - port: 8443
          protocol: TCP
    - ports:
        - port: 9443
          protocol: TCP
  podSelector:
    matchLabels:
      app: sensor
  policyTypes:
    - Ingress
